<resources>
    <string name="app_name">ClapToFindPhone</string>
    <string name="splash_warning">(This action can contain ads)</string>
    <string name="install_language">Initializing languages...</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="appliquer">Apply</string>
    <string name="current_language">Current Language</string>
    <string name="all_language">All Languages</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="start_now">Start now</string>
    <string name="clap_and_whistle">Clap &amp;&amp; Whistle</string>
    <string name="to_find_the_lost_phone">To find the lost phone easily</string>
    <string name="voice_passcode">Voice Passcode</string>
    <string name="record_voice_to_find_phone">Record voice as password to find phone</string>
    <string name="dont_touch_my_phone">Don’t touch my phone</string>
    <string name="turn_on_the_alert_when_someone_touchs_your_phone">Turn on the alert when someone touches\nyour phone</string>
    <string name="pocket_mode">Pocket mode</string>
    <string name="turn_on_alerts_when_someone_pulls_your_phone_out_of_your_pocket">Turn on alerts when someone pulls your\nphone out of your pocket</string>
    <string name="clap_to_find_the_phone">Clap to find the phone</string>
    <string name="wishing_you_a_great_application_experience">Wishing you a great application experience</string>
    <string name="start">Start</string>
    <string name="find_your_phone">Find your phone</string>
    <string name="change_theme">Change Theme</string>
    <string name="vibrate">Vibrate</string>
    <string name="how_to_use">How to use</string>
    <string name="flashlight">Flashlight</string>
    <string name="custom_sound">Custom Sound</string>
    <string name="cat_meowing">Cat meowing</string>
    <string name="clap_to_find">Clap to find</string>
    <string name="charger_alarm">Charger alarm</string>
    <string name="tap_to_active">Tap to active</string>
    <string name="change_audio_passcode">Change audio passcode</string>
    <string name="tap_to_deactive">Tap to deactive</string>
    <string name="found_your_phone">Found your phone</string>
    <string name="i_found_it">I Found It</string>
    <string name="find_my_phone">Find my phone</string>
    <string name="clap">Clap...</string>
    <string name="voice_passcode_notify"><![CDATA[Voice &amp;amp; Pass...]]></string>
    <string name="touch_phone_notify">Don\'t touch...</string>
    <string name="clap_to_find_phone_is_running">Clap to find my phone is running</string>
    <string name="touch_button_power_to_stop_alarm">Tap here to deactive</string>
    <string name="default_theme">Default theme</string>
    <string name="call_theme">Call theme</string>
    <string name="name">Name</string>
    <string name="phone">+123456789x</string>
    <string name="default_flash">Default</string>
    <string name="save">Save</string>
    <string name="edit_theme">Edit theme</string>
    <string name="apply_theme">Apply Theme</string>
    <string name="change_flashlight">Change flashlight</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="change_vibrate">Change vibrate</string>
    <string name="volume">Volume</string>
    <string name="duration">Duration</string>
    <string name="voicePasscode">Voice Passcode</string>
    <string name="dontTouchMyPhone">Don\'t touch my phone</string>
    <string name="pocketMode">Pocket mode</string>
    <string name="chargerAlarm">Charger alarm</string>
    <string name="how_to_use_clap1">Click the activate button</string>
    <string name="how_to_use_clap2">Double clap when you can’t find your phone</string>
    <string name="how_to_use_clap3">The app will detect the clapping sound and start ringing</string>
    <string name="how_to_use_clap4">Before activating, you can set the flashlight, adjust the volume and select alarm sound...</string>
    <string name="how_to_use_voice_passcode1">Create an audio passcode and save it</string>
    <string name="how_to_use_voice_passcode2">Click the activate button</string>
    <string name="how_to_use_voice_passcode3">Read the audio passcode aloud when you can\'t find your phone</string>
    <string name="how_to_use_voice_passcode4">The app will detect the sound passcode and start ringing</string>
    <string name="how_to_use_voice_passcode5">Before activating, you can set the flashlight, adjust the volume and select alarm sound...</string>
    <string name="how_to_use_touch_phone2">Wait about 5 seconds to set the alarm</string>
    <string name="how_to_use_touch_phone3">When someone touches your phone, the app detects and rings an alert</string>
    <string name="how_to_use_pocket_mode3">Put your phone in your pocket and make sure it is covered in your pocket</string>
    <string name="how_to_use_pocket_mode4">When someone pulls the phone out of your pocket, the app will detect and ring an alert</string>
    <string name="how_to_use_charger_phone3">Make sure your phone is charging</string>
    <string name="how_to_use_charger_phone4">When someone pulls the charger out of your phone, the app will detect it and ring an alert</string>
    <string name="edit">Edit</string>
    <string name="txt_phone">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Phone or Name can not be empty!</string>
    <string name="setting">Setting</string>
    <string name="rate">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="policy">Privacy Policy</string>
    <string name="rate_us_title">Do you like our application so far?\n</string>
    <string name="rate_us_content">Let us know and help us improve the experience for users like you\n</string>
    <string name="yes">Yes, I like it</string>
    <string name="no">Not ready</string>
    <string name="got_it">Got it</string>
    <string name="dialog_clap_title">You can try clapping your hands</string>
    <string name="dialog_clap_content">The application has activated the clap listening mode</string>
    <string name="dialog_voice_passcode_title">You can try speaking</string>
    <string name="dialog_voice_passcode_content">The application has enabled voice listening mode</string>
    <string name="dialog_pocket_mode_title">Try taking your phone out of your pocket</string>
    <string name="dialog_pocket_mode_content">The application has enabled pocket mode</string>
    <string name="dialog_charger_alarm_title">Try charging your phone battery</string>
    <string name="dialog_charger_alarm_content">The application has enabled charger alarm</string>
    <string name="dialog_touch_phone_title">You can try holding the phone</string>
    <string name="dialog_touch_phone_content">The application has enabled anti-touch mode</string>
    <string name="exit">Exit</string>
    <string name="exit_content">Do you want to exit?</string>
    <string name="exit_title">Exit App</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="dialog_vibrate_title">Add  your Vibrate type</string>
    <string name="dialog_vibrate_content">Watch a short video add to unlock Vibrate type</string>
    <string name="dialog_flashlight_title">Add  your Flash type</string>
    <string name="dialog_flashlight_content">Watch a short video add to unlock Flash type</string>
    <string name="vip_title">VIP MEMBER</string>
    <string name="vip_memeber_sub_content">Become a VIP member to unlock all premium features</string>
    <string name="remove_ads">Remove ADS</string>
    <string name="remove_ads_content">Ad-free experience</string>
    <string name="unlock_theme_title">Theme</string>
    <string name="unlock_content">Unlock all themes</string>
    <string name="unlock_sound_title">Sound</string>
    <string name="unlock_sound_content">Unlock all sounds</string>
    <string name="unlock_flashlight_title">Flashlight</string>
    <string name="unlock_flashlight_content">Unlock all flashes</string>
    <string name="unlock_vibrate_title">Vibrate</string>
    <string name="unlock_vibrate_content">Unlock all vibration modes</string>
    <string name="try_now">Try Now</string>
    <string name="become_vip_member">BECOME VIP</string>
    <string name="monthly">Monthly</string>
    <string name="month">/Month</string>
    <string name="month_guide">*Monthly renewal\nCancel anytime</string>
    <string name="lifetime">Lifetime</string>
    <string name="lifetime_guide">*Pay only once</string>
    <string name="best_value">Best value</string>
    <string name="year">Year</string>
    <string name="year_guide">*Automatic yearly renewal.\nCancel anytime</string>
    <string name="yearly">Yearly</string>
    <string name="vip_benefit">VIP member benefits</string>
    <string name="benefit1">Enjoy a variety of themes</string>
    <string name="benefit2">Customize a variety of sounds</string>
    <string name="benefit3">Optional many flashlight styles</string>
    <string name="benefit4">Optional multiple vibration types</string>
    <string name="benefit5">Experience the app without ads</string>
    <string name="unlock_theme">Unlock Theme</string>
    <string name="unlock_sound">Unlock Sound</string>
    <string name="unlock_flashmode">Unlock Flash mode</string>
    <string name="unlock_vibrate">Unlock Vibration mode</string>
    <string name="vip_member_noti">All our subscriptions will automatically renew unless canceled during the subscription period. The payment will be charged to your Google Play account upon purchase confirmation. You will be charged for renewal within 24 hours prior to the end of the current subscription period.\nYou can cancel auto-renewal at any time, but there will be no refunds during the active subscription, all you need to do is manage your auto-renewal option. It’s important to note that this must be done on your mobile device, and we cannot do it for you.</string>
    <string name="service_policy">Term of Service   I   Privacy Policy</string>
    <string name="wait_content">The alarm will start after 5 seconds\nput the phone in your place</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant_permission_sub_tittle">App need to give some permission to find phone\nby clapping</string>
    <string name="recording_permission">Recording permission</string>
    <string name="recording_sub">Allow the app to provide phone finder by clapping</string>
    <string name="overlay_permission">Overlay permission</string>
    <string name="overlay_permission_sub">The app needs to request the Appear on Top permission to show the warning</string>
    <string name="allow">Allow</string>
    <string name="continuee">Continue</string>
    <string name="record_permission">Record Permission</string>
    <string name="record_permission_content">You must grant record permission to use the app</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="request_permission_content">You need to give the app permission to work</string>
    <string name="voice">Voice</string>
    <string name="text_to_voice">Text to voice</string>
    <string name="warning">Warning:</string>
    <string name="content_warning">This function is under development, the English passcode will work better. Please speak/write passcode in English for best quality.\nThank you for trusting and using the application!</string>
    <string name="listen">Listen</string>
    <string name="write_something_to_speed">Write something to speed…</string>
    <string name="repeat">Repeat</string>
    <string name="plug_phone">Please plug in your phone .</string>
</resources>